# TelegramBotAPI

./: .gitignore  Backup.txt  BotSettings.json  CMakeLists.txt  Dependecies.cmake  LICENSE  PrecompiledHeaders  README.md  RequestManager.cpp  RequestManager.h  TelegramAPI.cpp  TelegramAPI.h  TelegramAPI.pro  TelegramAPI_global.h
CMake/: DependeciesPaths
Examples/: CMakeLists.txt
Examples/1_BotStartup/: CMakeLists.txt  main.cpp
Examples/2_IncomingMessagesHandling/: CMakeLists.txt  main.cpp
Examples/3_SendingMedia/: CMakeLists.txt  TestBot.cpp  TestBot.h  main.cpp
Examples/4_AdditionalKeyboards/: CMakeLists.txt  TestBot.cpp  TestBot.h  main.cpp
Examples/5_InlineMode/: CMakeLists.txt  main.cpp
Examples/AdditionalKeyboards/: CMakeLists.txt  TestBot.cpp  TestBot.h  main.cpp
Examples/BotStartup/: CMakeLists.txt  main.cpp
Examples/IncomingMessagesHandling/: CMakeLists.txt  main.cpp
Examples/InlineMode/: CMakeLists.txt  main.cpp
Examples/SendingMedia/: CMakeLists.txt  TestBot.cpp  TestBot.h  main.cpp
Headers/: Bot.h  BotSettings.h  WebhookManager.h
Headers/Internal/: ConversionFunctions.h
Headers/RequestManager/: RequestManagerInterface.h
Headers/Types/: BotCommandScopeAllChatAdministrators.h  BotCommandScopeAllGroupChats.h  BotCommandScopeAllPrivateChats.h  BotCommandScopeChat.h  BotCommandScopeChatAdministrators.h  BotCommandScopeChatMember.h  BotCommandScopeDefault.h  ChatInviteLink.h  ChatMemberLeft.h  ChatMemberMember.h  ChatMemberRestricted.h  ChatMemberUpdated.h  InlineQueryResultCachedGif.h  (+18 more)
Sources/: Bot.cpp  BotSettings.cpp  CMakeLists.txt  PrecompiledHeaders  RequestManager.cpp  WebhookManager.cpp
Sources/Headers/: Bot.h  BotSettings.h  FunctionArguments.h  TelegramBotAPI.h
Sources/Headers/Internal/: ConversionFunctions.h  RequestManager.h  TelegramListener.h
Sources/Headers/Internal/Utility/: QHttpMultiPartInserter.h  QHttpMultiPartInserter.hpp  QJsonArrayInserter.h  QJsonArrayInserter.hpp  QJsonObjectInserter.h  QJsonObjectInserter.hpp  QVectorInserter.h  QVectorInserter.hpp  Utility.h
Sources/Headers/Types/: Animation.h  Audio.h  BotCommand.h  BotCommandScope.h  BotCommandScopeAllChatAdministrators.h  BotCommandScopeAllGroupChats.h  BotCommandScopeAllPrivateChats.h  BotCommandScopeChat.h  BotCommandScopeChatAdministrators.h  BotCommandScopeChatMember.h  BotCommandScopeDefault.h  CallbackQuery.h  Chat.h  ChatInviteLink.h  ChatLocation.h  ChatMember.h  ChatMemberAdministrator.h  ChatMemberBanned.h  ChatMemberLeft.h  ChatMemberMember.h  ChatMemberOwner.h  ChatMemberRestricted.h  ChatMemberUpdated.h  ChatPermissions.h  ChatPhoto.h  ChosenInlineResult.h  Contact.h  Dice.h  Document.h  Error.h  File.h  ForceReply.h  InlineKeyboardButton.h  InlineKeyboardMarkup.h  InlineQuery.h  InlineQueryResult.h  InlineQueryResultArticle.h  InlineQueryResultAudio.h  InlineQueryResultCachedAudio.h  InlineQueryResultCachedDocument.h  (+59 more)
Sources/RequestManager/: RequestManagerInterface.cpp
Sources/Sources/: Bot.cpp  BotSettings.cpp
Sources/Sources/Internal/: RequestManager.cpp  TelegramListener.cpp  WebhookManager.cpp
Sources/Sources/Internal/Utility/: QHttpMultiPartInserter.cpp  QJsonArrayInserter.cpp  QJsonObjectInserter.cpp  Utility.cpp
Sources/Sources/Types/: Animation.cpp  Audio.cpp  BotCommand.cpp  BotCommandScopeChat.cpp  BotCommandScopeChatAdministrators.cpp  BotCommandScopeChatMember.cpp  CallbackQuery.cpp  Chat.cpp  ChatInviteLink.cpp  ChatLocation.cpp  ChatMemberAdministrator.cpp  ChatMemberBanned.cpp  ChatMemberLeft.cpp  ChatMemberMember.cpp  ChatMemberOwner.cpp  ChatMemberRestricted.cpp  ChatMemberUpdated.cpp  ChatPermissions.cpp  ChatPhoto.cpp  ChosenInlineResult.cpp  Contact.cpp  Dice.cpp  Document.cpp  Error.cpp  File.cpp  ForceReply.cpp  InlineKeyboardButton.cpp  InlineKeyboardMarkup.cpp  InlineQuery.cpp  InlineQueryResultArticle.cpp  InlineQueryResultAudio.cpp  InlineQueryResultCachedAudio.cpp  InlineQueryResultCachedDocument.cpp  InlineQueryResultCachedGif.cpp  InlineQueryResultCachedMpeg4Gif.cpp  InlineQueryResultCachedPhoto.cpp  InlineQueryResultCachedSticker.cpp  InlineQueryResultCachedVideo.cpp  InlineQueryResultCachedVoice.cpp  InlineQueryResultContact.cpp  (+50 more)
Sources/Types/: BotCommandScopeAllChatAdministrators.cpp  BotCommandScopeAllGroupChats.cpp  BotCommandScopeAllPrivateChats.cpp  BotCommandScopeChat.cpp  BotCommandScopeChatAdministrators.cpp  BotCommandScopeChatMember.cpp  BotCommandScopeDefault.cpp  ChatInviteLink.cpp  ChatLocation.cpp  ChatMemberAdministrator.cpp  ChatMemberBanned.cpp  ChatMemberLeft.cpp  ChatMemberMember.cpp  ChatMemberOwner.cpp  ChatMemberRestricted.cpp  ChatMemberUpdated.cpp  Error.cpp  InlineQueryResultAudio.cpp  InlineQueryResultCachedDocument.cpp  InlineQueryResultCachedMpeg4Gif.cpp  InlineQueryResultCachedPhoto.cpp  InlineQueryResultCachedSticker.cpp  InlineQueryResultCachedVideo.cpp  InlineQueryResultContact.cpp  InlineQueryResultDocument.cpp  InlineQueryResultGame.cpp  InlineQueryResultGif.cpp  InlineQueryResultLocation.cpp  InlineQueryResultMpeg4Gif.cpp  InlineQueryResultVoice.cpp  InputContactMessageContent.cpp  InputInvoiceMessageContent.cpp  InputTextMessageContent.cpp  MaskPosition.cpp  MessageAutoDeleteTimerChanged.cpp  MessageId.cpp  ProximityAlertTriggered.cpp  Sticker.cpp  StickerSet.cpp  Update.cpp  (+5 more)
TestBed/: CMakeLists.txt  TestBot.cpp  TestBot.h  main.cpp
Types/: Animation.cpp  Animation.h  Audio.cpp  BotCommand.cpp  CallbackQuery.h  Chat.cpp  ChatMember.cpp  ChatMember.h  Contact.cpp  Contact.h  Dice.cpp  Dice.h  Document.cpp  File.h  ForceReply.cpp  ForceReply.h  InlineKeyboardButton.cpp  InlineKeyboardButton.h  InlineKeyboardMarkup.h  InputFile.cpp  InputFile.h  InputMedia.h  InputMedia.h.autosave  InputMediaAnimation.cpp  InputMediaAnimation.h  InputMediaAudio.cpp  InputMediaAudio.h  InputMediaDocument.cpp  InputMediaDocument.h  InputMediaPhoto.cpp  InputMediaPhoto.cpp.autosave  InputMediaPhoto.h  InputMediaPhoto.h.autosave  KeyboardButton.h  KeyboardButtonPollType.h  LoginUrl.h  Message.h  MessageEntity.h  Poll.cpp  Poll.h  (+17 more)
headers/: TelegramBotAPI.h
sources/: TelegramBotAPI.cpp
(+116 files in other folders)
